feat: (06.08.23) Added endpoints for balance, reward creating and reward claiming (#80)