@@ -1,40 +1,83 @@
 package chatox.wallet.service.impl;
 
+import chatox.platform.pagination.PaginationRequest;
+import chatox.platform.security.web.AuthenticationHolder;
+import chatox.wallet.api.request.CreateBalanceChangeRequest;
+import chatox.wallet.api.response.BalanceChangeResponse;
 import chatox.wallet.api.response.BalanceResponse;
 import chatox.wallet.exception.BalanceNotFoundException;
+import chatox.wallet.external.UserApi;
+import chatox.wallet.mapper.BalanceChangeMapper;
 import chatox.wallet.mapper.BalanceMapper;
 import chatox.wallet.model.Balance;
+import chatox.wallet.model.BalanceChange;
+import chatox.wallet.model.BalanceChangeData;
+import chatox.wallet.model.BalanceChangeDataKey;
+import chatox.wallet.model.BalanceChangeDirection;
+import chatox.wallet.model.BalanceChangeType;
 import chatox.wallet.model.Currency;
+import chatox.wallet.model.RewardClaim;
 import chatox.wallet.model.User;
+import chatox.wallet.repository.BalanceChangeRepository;
 import chatox.wallet.repository.BalanceRepository;
-import chatox.wallet.security.AuthenticationHolder;
 import chatox.wallet.service.BalanceService;
+import chatox.wallet.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.ZonedDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
+import java.util.stream.Stream;
 
 @Service
 @Transactional
 @RequiredArgsConstructor
 public class BalanceServiceImpl implements BalanceService {
     private final BalanceRepository balanceRepository;
+    private final BalanceChangeRepository balanceChangeRepository;
     private final BalanceMapper balanceMapper;
+    private final BalanceChangeMapper balanceChangeMapper;
     private final AuthenticationHolder<User> authenticationHolder;
+    private final UserService userService;
 
     @Override
     public List<BalanceResponse> getBalanceOfCurrentUser() {
         var userId = authenticationHolder.requireCurrentUserDetails().getId();
+        var balances = balanceRepository.findByUserId(userId);
 
-        return balanceRepository.findByUserId(userId)
+        if (balances.size() == Currency.values().length) {
+            return balances.stream()
+                    .map(balanceMapper::toBalanceResponse)
+                    .toList();
+        }
+
+        var user = authenticationHolder.requireCurrentUser();
+
+        return createMissingBalances(balances, user)
                 .stream()
                 .map(balanceMapper::toBalanceResponse)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private List<Balance> createMissingBalances(List<Balance> existingBalances, User user) {
+        var balances = new ArrayList<>(existingBalances);
+        var exisingCurrencies = existingBalances.stream().map(Balance::getCurrency).toList();
+        var missingCurrencies = Stream
+                .of(Currency.values())
+                .filter(currency -> !exisingCurrencies.contains(currency));
+        var newBalances = new ArrayList<Balance>();
+
+        missingCurrencies.forEach(currency -> newBalances.add(createNewBalance(user, currency)));
+
+        balances.addAll(newBalances);
+
+        return balances;
     }
 
     @Override
@@ -44,7 +87,15 @@ public class BalanceServiceImpl implements BalanceService {
 
     @Override
     public Balance getBalanceOfCurrentUser(Currency currency, boolean createIfAbsent) {
-        var userId = authenticationHolder.requireCurrentUserDetails().getId();
+       return getBalanceOfUser(
+               authenticationHolder.requireCurrentUserDetails().getId(),
+               currency,
+               createIfAbsent,
+               authenticationHolder::requireCurrentUser
+       );
+    }
+
+    private Balance getBalanceOfUser(String userId, Currency currency, boolean createIfAbsent, Supplier<User> getUser) {
         var balance = balanceRepository.findByUserIdAndCurrency(userId, currency);
 
         if (balance.isPresent()) {
@@ -55,7 +106,94 @@ public class BalanceServiceImpl implements BalanceService {
             throw new BalanceNotFoundException(userId, currency);
         }
 
-        return createNewBalance(authenticationHolder.requireCurrentUser(), currency);
+        return createNewBalance(getUser.get(), currency);
+    }
+
+    @Override
+    public Balance applyBalanceChange(Balance balance, BalanceChange balanceChange) {
+        if (balanceChange.getDirection().equals(BalanceChangeDirection.IN)) {
+            balance.setAmount(balance.getAmount().add(balanceChange.getChange()));
+        } else {
+            balance.setAmount(balance.getAmount().subtract(balanceChange.getChange()));
+        }
+
+        balanceRepository.save(balance);
+
+        balanceChange.setBalanceAfter(balance.getAmount());
+
+        balanceChangeRepository.save(balanceChange);
+
+        return balance;
+    }
+
+    @Override
+    public void updateBalance(Balance balance, RewardClaim rewardClaim) {
+        var balanceChange = BalanceChange.builder()
+                .id(UUID.randomUUID().toString())
+                .change(rewardClaim.getClaimedAmount())
+                .balanceBefore(balance.getAmount())
+                .balance(balance)
+                .date(ZonedDateTime.now())
+                .type(BalanceChangeType.REWARD)
+                .direction(BalanceChangeDirection.IN)
+                .build();
+        var balanceChangeData = List.of(
+                BalanceChangeData.builder()
+                        .id(UUID.randomUUID().toString())
+                        .key(BalanceChangeDataKey.REWARD_CLAIM_ID)
+                        .value(rewardClaim.getId())
+                        .balanceChange(balanceChange)
+                        .build()
+        );
+        balanceChange.setBalanceChangeData(balanceChangeData);
+        applyBalanceChange(balance, balanceChange);
+    }
+
+    @Override
+    public List<BalanceChangeResponse> getBalanceHistoryOfCurrentUser(Currency currency, PaginationRequest paginationRequest) {
+        var balance = getBalanceOfCurrentUser(currency, true);
+
+        return balanceChangeRepository.findByBalance(balance, paginationRequest.toPageRequest())
+                .stream()
+                .map(balanceChangeMapper::toBalanceChangeResponse)
+                .toList();
+    }
+
+    @Override
+    public BalanceResponse updateBalance(CreateBalanceChangeRequest createBalanceChangeRequest) {
+        var currentUser = authenticationHolder.requireCurrentUser();
+        var balance = getBalanceOfUser(
+                createBalanceChangeRequest.getUserId(),
+                createBalanceChangeRequest.getCurrency(),
+                true,
+                () -> userService.requireUserById(createBalanceChangeRequest.getUserId())
+        );
+
+        var balanceChange = BalanceChange.builder()
+                .id(UUID.randomUUID().toString())
+                .change(createBalanceChangeRequest.getAmount())
+                .balanceBefore(balance.getAmount())
+                .balance(balance)
+                .date(ZonedDateTime.now())
+                .type(
+                        createBalanceChangeRequest.getDirection().equals(BalanceChangeDirection.IN)
+                                ? BalanceChangeType.MANUAL_ADD
+                                : BalanceChangeType.MANUAL_DEDUCT
+                )
+                .direction(createBalanceChangeRequest.getDirection())
+                .createdBy(currentUser)
+                .build();
+        var balanceChangeData = List.of(
+                BalanceChangeData.builder()
+                        .id(UUID.randomUUID().toString())
+                        .key(BalanceChangeDataKey.COMMENT)
+                        .value(createBalanceChangeRequest.getComment())
+                        .balanceChange(balanceChange)
+                        .build()
+        );
+        balanceChange.setBalanceChangeData(balanceChangeData);
+
+        return balanceMapper.toBalanceResponse(applyBalanceChange(balance, balanceChange));
     }
 
     private Balance createNewBalance(User user, Currency currency) {
